
Note that this file only includes changes since Ice 3.2.1. For the
change history of prior releases, refer to the CHANGES file in the
subdirectory of each language mapping (e.g., cpp/CHANGES).


======================================================================
Changes since version 3.5b
======================================================================


General Changes
===============

- Added support for wrapInputStream function. Unlike the
  createInputStream function, the returned input stream wraps the
  provided encoded data rather than copying it. While it avoids
  copying the data, care must be taken to not modify the data while
  the input stream is being used.

- The IceBox server no longer configures a service's logger if the
  service defines Ice.LogFile or Ice.UseSyslog.

- IceGrid should now interoperate with IceGrid node versions >= 3.2.

- Fixed issue where defining an IceUtil::Handle for a specialization
  of a generated Slice class would fail to compile because the Slice
  class privately inherited from IceInternal::GCShared.

- Fixed client side checks for encoding version. An invocation on a
  proxy with a compatible encoding (same major version) will now
  succeed even if the encoding minor version isn't supported. In this
  case, the Ice run time uses the greatest supported encoding.

- Fixed bug where the retry of an AMI invocation could trigger an
  assertion.

- Improved the dispatch and remote invocation metrics classes to
  support additional size and replySize data members.

- Improved the 1.1 encoding to further reduce the size of encoded
  objects. Objects are no longer encoded at the end of the
  encapsulation. Instead, an object is encoded as soon as it's written
  and it hasn't already been encoded within the encapsulation.
  
  IMPORTANT: This change implies that the 1.1 class encoding from Ice
  3.5.0 is incompatible with the encoding from the 3.5 beta version.
